<?xml version="1.0" encoding="utf-8"?>
<!--ADDED SCROLL VIEW FOR LANDSCAPE ORIENTATION-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/lightBlue"
    tools:context=".FileUploadScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/uploadFileMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:gravity="center"
            android:orientation="vertical">

          <!--Upload File Section -->
            <LinearLayout
                android:id="@+id/uploadFileSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="320dp"
                    android:layout_height="69dp"
                    android:background="#FFFFFF"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/back_button_Upload_Files"
                        android:layout_width="57dp"
                        android:layout_height="35dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="-16dp"
                        android:layout_toStartOf="@+id/uploadFileSection_title"
                        android:background="#FFFFFF"
                        android:src="@drawable/ic_launcher_foreground" />

                    <TextView
                        android:id="@+id/uploadFileSection_title"
                        android:layout_width="184dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="27dp"
                        android:layout_marginEnd="52dp"
                        android:paddingLeft="8dp"
                        android:text="@string/UploadFile_label"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="28sp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/shape2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/upload_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="16dp"
                        android:src="@drawable/baseline_cloud_upload_24" />

                    <TextView
                        android:id="@+id/upload_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:text="@string/dragDrop_label"/>

                    <TextView
                        android:id="@+id/upload_or"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/dragDrop_or_label"/>

                    <Button
                        android:id="@+id/outlinedButton"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/browseButton_label" />
                </LinearLayout>
            </LinearLayout>



           <!--Preview Layout -->
            <LinearLayout
                android:id="@+id/previewSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">  <!--Visibility Set To Gone-->

                <!-- Custom Toolbar with Back Button and Preview Text -->
                <RelativeLayout
                    android:layout_width="320dp"
                    android:layout_height="69dp"
                    android:background="#FFFFFF"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/back_button_preview_section"
                        android:layout_width="70dp"
                        android:layout_height="39dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="-2dp"
                        android:layout_toStartOf="@id/preview_title"
                        android:background="#FFFFFF"
                        android:src="@drawable/ic_launcher_foreground" />
                    <TextView
                        android:id="@+id/preview_title"
                        android:layout_width="128dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="27dp"
                        android:layout_marginEnd="92dp"
                        android:paddingLeft="8dp"
                        android:text="@string/preview_text_label"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="28sp" />
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/shape2"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/previewImage"
                        android:layout_width="320dp"
                        android:layout_height="280dp"
                        android:layout_marginTop="16dp"
                        android:scaleType="fitCenter" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/fileUploadBtn"
                        android:layout_width="338dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:text="@string/previewUpload_button_label"/>
                    <com.google.android.material.progressindicator.CircularProgressIndicator
                        android:id="@+id/uploadProgressBar"
                        android:layout_width="58dp"
                        android:layout_height="58dp"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        app:indicatorInset="21dp"
                        app:indicatorSize="31dp"
                        app:showDelay="@integer/material_motion_duration_long_1" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/runModelBtn"
                        android:layout_width="338dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:text="Run Model"/>
                    <com.google.android.material.progressindicator.CircularProgressIndicator
                        android:id="@+id/uploadProgressBar2"
                        android:layout_width="58dp"
                        android:layout_height="58dp"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        app:indicatorInset="21dp"
                        app:indicatorSize="31dp"
                        app:showDelay="@integer/material_motion_duration_long_1"/>
                </FrameLayout>
                <TextView
                    android:id="@+id/ml_response_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:visibility="gone" />
            </LinearLayout>
            </LinearLayout>
        </LinearLayout>
</ScrollView>
