...
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:padding="1dp"
        app:layout_constraintTop_toBottomOf="@id/Terms_and_Conditions_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/BtnNxt">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:padding="13dp"
...
